--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
