fonctionalite creation/ajout nouvelle utilisateur

--- a/backEnd/.env
+++ b/backEnd/.env
@@ -11,4 +11,4 @@ APP_SSL_ONLY = false
 ## FILE MANAGER
 
 ## MOGODB
-MONGODB_URI = ""mongodb+srv://tomy:htH8rXAoGMp95Ky8@pangolindb.gqmcllp.mongodb.net/?retryWrites=true&w=majority""
+MONGODB_URI = "mongodb+srv://tomy:htH8rXAoGMp95Ky8@pangolindb.gqmcllp.mongodb.net/?retryWrites=true&w=majority"
